--- a/PGA_Segment&Clust_Toronto_01.ipynb
+++ b/PGA_Segment&Clust_Toronto_01.ipynb
@@ -6,7 +6,7 @@
       "name": "PGA_Segment&Clust_Toronto_01.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN+3rApbYhacvJ5yLg65KY7",
+      "authorship_tag": "ABX9TyN07kYasJZ/swolKb4w3SAa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,18 +59,15 @@
       "source": [
         "# WEB SCRAPING\n",
         "# Table from Wikipedia\n",
-        "#### Finding ZIP Code, Borough, and Neighbourhood\n",
+        "#### Finding Postal Codes, Borough, and Neighbourhood\n",
         "#\n",
         "# loading the libraries required\n",
-        "from time import time\n",
-        "from IPython.core.display import clear_output\n",
-        "from warnings import warn\n",
         "from bs4 import BeautifulSoup\n",
         "import requests\n",
         "import pandas as pd\n",
         "#"
       ],
-      "execution_count": 126,
+      "execution_count": 121,
       "outputs": []
     },
     {
@@ -80,7 +77,7 @@
         "colab_type": "text"
       },
       "source": [
-        "In this point I need to prepare the variables and parameters to make the request data process."
+        "In this point I need to prepare the parameters to make the request data process."
       ]
     },
     {
@@ -91,18 +88,12 @@
         "colab": {}
       },
       "source": [
-        "# prepare for the monitoring logic\n",
-        "start_time = time() # note the system time when the program starts\n",
-        "#\n",
         "# variables to handle the request\n",
         "query = {'table':''}\n",
         "url = ' https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M' # web to scrap\n",
-        "#\n",
-        "# keep the output clear\n",
-        "clear_output(wait = True)\n",
         "#"
       ],
-      "execution_count": 128,
+      "execution_count": 122,
       "outputs": []
     },
     {
@@ -112,7 +103,7 @@
         "colab_type": "text"
       },
       "source": [
-        "With this code I going to get the data from the response."
+        "With this code I going to get the data from the response and extract the items required from the data."
       ]
     },
     {
@@ -123,49 +114,34 @@
         "colab": {}
       },
       "source": [
+        "# make the request\n",
+        "response = requests.get(url, params=query)\n",
+        "#\n",
         "# get the full data from the response\n",
-        "def get_data_response():\n",
-        "  data = response.text\n",
-        "  soup = BeautifulSoup(data, 'html.parser')\n",
-        "  table = soup.find_all('table')[0] # Grab the table\n",
-        "  new_table = pd.DataFrame(columns=['Postal Code','Borough','Neighbourhood'],index=range(0,181)) # I know the size and the columns names\n",
-        "  #"
+        "data = response.text\n",
+        "soup = BeautifulSoup(data, 'html.parser')\n",
+        "table = soup.find_all('table')[0] # Grab the original table\n",
+        "#\n",
+        "# to know the original table rows number\n",
+        "for row in table.find_all('tr'):\n",
+        "    row_marker += 1\n",
+        "#\n",
+        "# building a new table to be filled with the correct data\n",
+        "new_table = pd.DataFrame(columns=['Postal Code','Borough','Neighbourhood'],index=range(0,row_marker)) # Now I know the size and the columns names\n",
+        "#\n",
+        "# getting the items requested  \n",
+        "row_marker = 0\n",
+        "for row in table.find_all('tr'):\n",
+        "    column_marker = 0\n",
+        "    columns = row.find_all('td')\n",
+        "    for column in columns:\n",
+        "        new_table.iat[row_marker,column_marker] = column.get_text()[:-1]\n",
+        "        column_marker += 1\n",
+        "    row_marker += 1\n",
+        "new_table = new_table.drop([0])\n",
+        "#"
       ],
-      "execution_count": 129,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "SYt6202P2Ydi",
-        "colab_type": "text"
-      },
-      "source": [
-        "This code was prepared to extract the items required from the data."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Jp07HOUA2sql",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def extratc_items():\n",
-        "  # get the items requested  \n",
-        "  row_marker = 0\n",
-        "  for row in table.find_all('tr'):\n",
-        "      column_marker = 0\n",
-        "      columns = row.find_all('td')\n",
-        "      for column in columns:\n",
-        "          new_table.iat[row_marker,column_marker] = column.get_text()[:-1]\n",
-        "          column_marker += 1\n",
-        "      row_marker += 1\n",
-        "  new_table=new_table.drop([0])\n",
-        "  #"
-      ],
-      "execution_count": 130,
+      "execution_count": 123,
       "outputs": []
     },
     {
@@ -183,61 +159,62 @@
       "metadata": {
         "id": "2XpLUFqX3wmw",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 180
+        },
+        "outputId": "91bb8899-79db-4c41-c611-0ad77daf008f"
       },
       "source": [
-        "def data_cleaning():\n",
-        "  # filtering the Borough from Toronto\n",
-        "  toronto_boroughs=['North York','East York','York','Scarborough','Etobicoke','Downtown Toronto','East Toronto','West Toronto','North Toronto','Central Toronto']\n",
-        "  new_table = new_table[new_table.Borough.isin(toronto_boroughs)]\n",
-        "  #\n",
-        "  # eliminating the rows with Borough == 'Not assigned'\n",
-        "  new_table.drop(new_table[new_table.Borough == 'Not assigned'].index, inplace=True)\n",
-        "  #\n",
-        "  # assigning the Borough like Neighbourhood for Neighbourhood == 'Not assigned'\n",
-        "  new_table['Neighbourhood'].mask(new_table['Neighbourhood'] == 'Not assigned', new_table['Borough'], inplace=True)\n",
-        "  #\n",
-        "  # reseting the indexes\n",
-        "  new_table = new_table.reset_index(drop=True)\n",
-        "  #"
-      ],
-      "execution_count": 131,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "fVn9aB10xrty",
-        "colab_type": "text"
-      },
-      "source": [
-        "In order to prevent any isue with the response at the request, we need to check with a conditional 'if-else' to manage the errors or warnings.\n",
-        "Ones checked, we proceed to call our principal functions or present the isue info."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "z7f-xWFqLjj0",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# make the request\n",
-        "response = requests.get(url, params=query)\n",
+        "# eliminating the rows with blank items\n",
+        "new_table.dropna(inplace=True)\n",
         "#\n",
-        "# we got a valid response ?\n",
-        "if(response.ok):\n",
-        "  get_data_response\n",
-        "  extratc_items\n",
-        "  data_cleaning\n",
-        "else:\n",
-        "  # display a warning if there are any problems\n",
-        "  warn('Request #: {}, Failed with status code: {}'.format(request_count, response.status_code))\n",
-        "  #"
+        "# filtering the Borough from Toronto\n",
+        "toronto_boroughs=['North York','East York','York','Scarborough','Etobicoke','Downtown Toronto','East Toronto','West Toronto','North Toronto','Central Toronto'] # according with the Toronto City Map\n",
+        "new_table_in = new_table[new_table.Borough.isin(toronto_boroughs)]    # Valid Postal Codes\n",
+        "new_table_not = new_table[~new_table.Borough.isin(toronto_boroughs)]  # Not valid Postal Codes\n",
+        "#\n",
+        "# eliminating the rows with Borough == 'Not assigned'\n",
+        "new_table_in.drop(new_table_in[new_table_in.Borough == 'Not assigned'].index, inplace=True)    # Valid Postal Codes\n",
+        "new_table_not.drop(new_table_not[new_table_not.Borough == 'Not assigned'].index, inplace=True) # Not valid Postal Codes\n",
+        "#\n",
+        "# assigning the Borough like Neighbourhood for Neighbourhood == 'Not assigned'\n",
+        "new_table_in['Neighbourhood'].mask(new_table_in['Neighbourhood'] == 'Not assigned', new_table_in['Borough'], inplace=True)    # Valid Postal Codes\n",
+        "new_table_not['Neighbourhood'].mask(new_table_not['Neighbourhood'] == 'Not assigned', new_table_not['Borough'], inplace=True) # Not valid Postal Codes\n",
+        "#\n",
+        "# reseting the indexes\n",
+        "new_table_in = new_table_in.reset_index(drop=True)    # Valid Postal Codes\n",
+        "new_table_not = new_table_not.reset_index(drop=True)  # Not valid Postal Codes\n",
+        "#\n",
+        "# searching for Neighbourhoods with multiple Valid Postal Codes\n",
+        "multiple_postal_codes = new_table_in[new_table_in.duplicated(subset=['Neighbourhood'],keep=False)]\n",
+        "df_multiple = pd.DataFrame(multiple_postal_codes)\n",
+        "df_multiple_group = df_multiple.groupby(['Neighbourhood'])['Postal Code'].apply(','.join).reset_index()\n",
+        "multiple_postal_neighbourhoods = df_multiple_group['Neighbourhood'].size # Neighbourhoods with multiple valid postal codes\n",
+        "#\n",
+        "# counting multiple valid postal codes\n",
+        "multiple_code = df_multiple['Neighbourhood'].value_counts(ascending=True)\n",
+        "#"
       ],
-      "execution_count": 132,
-      "outputs": []
+      "execution_count": 257,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/pandas/core/frame.py:3997: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  errors=errors,\n",
+            "/usr/local/lib/python3.6/dist-packages/pandas/core/generic.py:8765: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  self._update_inplace(new_data)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -246,7 +223,7 @@
         "colab_type": "text"
       },
       "source": [
-        "If was a sussecful process, here we can see the final results with some info about it."
+        "If was a sussecful process, now I can see the final results with some info about it."
       ]
     },
     {
@@ -256,34 +233,60 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 553
+          "height": 732
         },
-        "outputId": "0d8975e8-29f4-4d1d-d843-e9003f618b12"
+        "outputId": "03f18dfe-35a2-4c0c-db79-137936e17fab"
       },
       "source": [
         "# output some logs for monitoring\n",
-        "elapsed_time = time() - start_time\n",
-        "clear_output()      \n",
-        "print('Scrap process complete\\n')\n",
-        "print('Elapsed time: {} seconds, {} Valid Postal Codes Scraped.\\n'.format(elapsed_time, len(new_table)))\n",
-        "print(new_table.describe(),'\\n')\n",
+        "#\n",
+        "# some stats\n",
+        "valid = len(new_table_in)\n",
+        "not_valid = len(new_table_not)\n",
+        "total_scraped = valid+not_valid\n",
+        "#\n",
+        "print('Scrap process complete ==>\\n')\n",
+        "print('=======================================================================================')\n",
+        "print('    Valid Postal Codes ==> for Area of Toronto City According with the Map of the city.\\n')\n",
+        "print('Not Valid Postal Codes ==> for Area of Toronto City According with the Map of the city.')\n",
+        "print('=======================================================================================\\n\\n')\n",
+        "print('This Neighbourghoods have a Not Valid Postal Code to Toronto City Area ==>')\n",
+        "print('{:.2%} ==> {} Not Valid Postal Codes Scraped for \"{}\" : {}.\\n'.format((not_valid/total_scraped),not_valid,new_table_not['Neighbourhood'][0],new_table_not['Postal Code'][0]))\n",
+        "print('This Neighbourghoods have Multiple Valid Postal Codes to Toronto City Area ==>')\n",
+        "marker = 0\n",
+        "for count in multiple_code:\n",
+        "  print('{:.2%} ==> {} Valid Postal Codes Scraped for \"{}\" : {}.\\n'.format((count/total_scraped),count,df_multiple_group['Neighbourhood'][marker],df_multiple_group['Postal Code'][marker]))\n",
+        "  marker = marker+1\n",
+        "print('This Neighbourghoods have a Valid Postal Code to Toronto City Area (Multiple Valid Codes included) ==>')\n",
+        "print('{:.2%} ==> {} Valid Postal Codes Scraped.\\n\\n'.format((valid/total_scraped),valid))\n",
         "# output the results\n",
-        "new_table"
+        "new_table_in"
       ],
-      "execution_count": 134,
+      "execution_count": 291,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Scrap process complete\n",
+            "Scrap process complete ==>\n",
             "\n",
-            "Elapsed time: 162.38226127624512 seconds, 102 Valid Postal Codes Scraped.\n",
+            "=======================================================================================\n",
+            "    Valid Postal Codes ==> for Area of Toronto City According with the Map of the city\n",
             "\n",
-            "       Postal Code     Borough Neighbourhood\n",
-            "count          102         102           102\n",
-            "unique         102           9            98\n",
-            "top            M9N  North York     Downsview\n",
-            "freq             1          24             4 \n",
+            "Not Valid Postal Codes ==> for Area of Toronto City According with the Map of the city\n",
+            "=======================================================================================\n",
+            "\n",
+            "\n",
+            "This Neighbourghoods have a Not Valid Postal Code to Toronto City Area ==>\n",
+            "0.97% ==> 1 Not Valid Postal Codes Scraped for \"Canada Post Gateway Processing Centre\" : M7R.\n",
+            "\n",
+            "This Neighbourghoods have Multiple Valid Postal Codes to Toronto City Area ==>\n",
+            "1.94% ==> 2 Valid Postal Codes Scraped for \"Don Mills\" : M3B,M3C.\n",
+            "\n",
+            "3.88% ==> 4 Valid Postal Codes Scraped for \"Downsview\" : M3K,M3L,M3M,M3N.\n",
+            "\n",
+            "This Neighbourghoods have a Valid Postal Code to Toronto City Area (Multiple Valid Codes included) ==>\n",
+            "99.03% ==> 102 Valid Postal Codes Scraped.\n",
+            "\n",
             "\n"
           ],
           "name": "stdout"
@@ -407,7 +410,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 134
+          "execution_count": 291
         }
       ]
     }
