--- a/PGA_Segment&Clust_Toronto_01.ipynb
+++ b/PGA_Segment&Clust_Toronto_01.ipynb
@@ -6,7 +6,7 @@
       "name": "PGA_Segment&Clust_Toronto_01.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN07kYasJZ/swolKb4w3SAa",
+      "authorship_tag": "ABX9TyORIIhujGmol/d37bCUybdW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,8 +35,7 @@
         "# Peer-graded Assignment: Segmenting and Clustering Neighborhoods in Toronto\n",
         "\n",
         "\n",
-        "> In the next cells I propose a code in python according with the instruccions for this peer-graded assignement.\n",
-        "\n"
+        "> In the next cells I propose a code in python according with the instruccions for this peer-graded assignement."
       ]
     },
     {
@@ -67,7 +66,7 @@
         "import pandas as pd\n",
         "#"
       ],
-      "execution_count": 121,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -93,7 +92,7 @@
         "url = ' https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M' # web to scrap\n",
         "#"
       ],
-      "execution_count": 122,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -123,6 +122,7 @@
         "table = soup.find_all('table')[0] # Grab the original table\n",
         "#\n",
         "# to know the original table rows number\n",
+        "row_marker = 0\n",
         "for row in table.find_all('tr'):\n",
         "    row_marker += 1\n",
         "#\n",
@@ -141,7 +141,7 @@
         "new_table = new_table.drop([0])\n",
         "#"
       ],
-      "execution_count": 123,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -163,7 +163,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 180
         },
-        "outputId": "91bb8899-79db-4c41-c611-0ad77daf008f"
+        "outputId": "47dcf6cc-c6cc-4be2-fa6e-470bb5d144c4"
       },
       "source": [
         "# eliminating the rows with blank items\n",
@@ -196,7 +196,7 @@
         "multiple_code = df_multiple['Neighbourhood'].value_counts(ascending=True)\n",
         "#"
       ],
-      "execution_count": 257,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -235,14 +235,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 732
         },
-        "outputId": "03f18dfe-35a2-4c0c-db79-137936e17fab"
+        "outputId": "a956f866-1cc8-430a-f9c5-644083045ef3"
       },
       "source": [
         "# output some logs for monitoring\n",
         "#\n",
         "# some stats\n",
-        "valid = len(new_table_in)\n",
-        "not_valid = len(new_table_not)\n",
+        "valid = new_table_in.to_numpy().shape[0]\n",
+        "not_valid = new_table_not.to_numpy().shape[0]\n",
         "total_scraped = valid+not_valid\n",
         "#\n",
         "print('Scrap process complete ==>\\n')\n",
@@ -262,7 +262,7 @@
         "# output the results\n",
         "new_table_in"
       ],
-      "execution_count": 291,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -270,9 +270,9 @@
             "Scrap process complete ==>\n",
             "\n",
             "=======================================================================================\n",
-            "    Valid Postal Codes ==> for Area of Toronto City According with the Map of the city\n",
+            "    Valid Postal Codes ==> for Area of Toronto City According with the Map of the city.\n",
             "\n",
-            "Not Valid Postal Codes ==> for Area of Toronto City According with the Map of the city\n",
+            "Not Valid Postal Codes ==> for Area of Toronto City According with the Map of the city.\n",
             "=======================================================================================\n",
             "\n",
             "\n",
@@ -410,7 +410,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 291
+          "execution_count": 5
         }
       ]
     }
