--- a/PGA_Segment&Clust_Toronto_01.ipynb
+++ b/PGA_Segment&Clust_Toronto_01.ipynb
@@ -6,7 +6,7 @@
       "name": "PGA_Segment&Clust_Toronto_01.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyORIIhujGmol/d37bCUybdW",
+      "authorship_tag": "ABX9TyO8KCEk4zwxOcM/AszNV/U/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,7 +66,7 @@
         "import pandas as pd\n",
         "#"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -92,7 +92,7 @@
         "url = ' https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M' # web to scrap\n",
         "#"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -141,7 +141,7 @@
         "new_table = new_table.drop([0])\n",
         "#"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -163,7 +163,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 180
         },
-        "outputId": "47dcf6cc-c6cc-4be2-fa6e-470bb5d144c4"
+        "outputId": "7d5cc1d9-bee1-4540-b232-a675f262d0b3"
       },
       "source": [
         "# eliminating the rows with blank items\n",
@@ -196,7 +196,7 @@
         "multiple_code = df_multiple['Neighbourhood'].value_counts(ascending=True)\n",
         "#"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,9 +233,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 732
+          "height": 716
         },
-        "outputId": "a956f866-1cc8-430a-f9c5-644083045ef3"
+        "outputId": "18e2e03b-4584-4602-bfc9-5f21ce41b697"
       },
       "source": [
         "# output some logs for monitoring\n",
@@ -246,47 +246,47 @@
         "total_scraped = valid+not_valid\n",
         "#\n",
         "print('Scrap process complete ==>\\n')\n",
-        "print('=======================================================================================')\n",
-        "print('    Valid Postal Codes ==> for Area of Toronto City According with the Map of the city.\\n')\n",
-        "print('Not Valid Postal Codes ==> for Area of Toronto City According with the Map of the city.')\n",
-        "print('=======================================================================================\\n\\n')\n",
-        "print('This Neighbourghoods have a Not Valid Postal Code to Toronto City Area ==>')\n",
+        "print('==================================================================================================')\n",
+        "print('    Valid Postal Codes ==> {} for Area of Toronto City According with the Map of the city.\\n'.format(not_valid))\n",
+        "print('Not Valid Postal Codes ==> {} for Area of Toronto City According with the Map of the city.'.format(valid))\n",
+        "print('==================================================================================================\\n')\n",
+        "print('This Neighbourghoods have a Not Valid Postal Code to Toronto City Area')\n",
         "print('{:.2%} ==> {} Not Valid Postal Codes Scraped for \"{}\" : {}.\\n'.format((not_valid/total_scraped),not_valid,new_table_not['Neighbourhood'][0],new_table_not['Postal Code'][0]))\n",
-        "print('This Neighbourghoods have Multiple Valid Postal Codes to Toronto City Area ==>')\n",
+        "print('This Neighbourghoods have a Valid Postal Code to Toronto City Area (Multiple Valid Codes included)')\n",
+        "print('{:.2%} ==> {} Valid Postal Codes Scraped.\\n'.format((valid/total_scraped),valid))\n",
+        "print('This Neighbourghoods have Multiple Valid Postal Codes to Toronto City Area')\n",
         "marker = 0\n",
         "for count in multiple_code:\n",
-        "  print('{:.2%} ==> {} Valid Postal Codes Scraped for \"{}\" : {}.\\n'.format((count/total_scraped),count,df_multiple_group['Neighbourhood'][marker],df_multiple_group['Postal Code'][marker]))\n",
+        "  print('{:.2%} ==> {} Valid Postal Codes Scraped for \"{}\" : {}.'.format((count/total_scraped),count,df_multiple_group['Neighbourhood'][marker],df_multiple_group['Postal Code'][marker]))\n",
         "  marker = marker+1\n",
-        "print('This Neighbourghoods have a Valid Postal Code to Toronto City Area (Multiple Valid Codes included) ==>')\n",
-        "print('{:.2%} ==> {} Valid Postal Codes Scraped.\\n\\n'.format((valid/total_scraped),valid))\n",
+        "print('\\n==================================================================================================\\n')\n",
         "# output the results\n",
         "new_table_in"
       ],
-      "execution_count": 5,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Scrap process complete ==>\n",
             "\n",
-            "=======================================================================================\n",
-            "    Valid Postal Codes ==> for Area of Toronto City According with the Map of the city.\n",
+            "==================================================================================================\n",
+            "    Valid Postal Codes ==> 1 for Area of Toronto City According with the Map of the city.\n",
             "\n",
-            "Not Valid Postal Codes ==> for Area of Toronto City According with the Map of the city.\n",
-            "=======================================================================================\n",
+            "Not Valid Postal Codes ==> 102 for Area of Toronto City According with the Map of the city.\n",
+            "==================================================================================================\n",
             "\n",
-            "\n",
-            "This Neighbourghoods have a Not Valid Postal Code to Toronto City Area ==>\n",
+            "This Neighbourghoods have a Not Valid Postal Code to Toronto City Area\n",
             "0.97% ==> 1 Not Valid Postal Codes Scraped for \"Canada Post Gateway Processing Centre\" : M7R.\n",
             "\n",
-            "This Neighbourghoods have Multiple Valid Postal Codes to Toronto City Area ==>\n",
-            "1.94% ==> 2 Valid Postal Codes Scraped for \"Don Mills\" : M3B,M3C.\n",
-            "\n",
-            "3.88% ==> 4 Valid Postal Codes Scraped for \"Downsview\" : M3K,M3L,M3M,M3N.\n",
-            "\n",
-            "This Neighbourghoods have a Valid Postal Code to Toronto City Area (Multiple Valid Codes included) ==>\n",
+            "This Neighbourghoods have a Valid Postal Code to Toronto City Area (Multiple Valid Codes included)\n",
             "99.03% ==> 102 Valid Postal Codes Scraped.\n",
             "\n",
+            "This Neighbourghoods have Multiple Valid Postal Codes to Toronto City Area\n",
+            "1.94% ==> 2 Valid Postal Codes Scraped for \"Don Mills\" : M3B,M3C.\n",
+            "3.88% ==> 4 Valid Postal Codes Scraped for \"Downsview\" : M3K,M3L,M3M,M3N.\n",
+            "\n",
+            "==================================================================================================\n",
             "\n"
           ],
           "name": "stdout"
@@ -410,7 +410,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 16
         }
       ]
     }
