--- a/PGA_Segment&Clust_Toronto_01.ipynb
+++ b/PGA_Segment&Clust_Toronto_01.ipynb
@@ -6,7 +6,7 @@
       "name": "PGA_Segment&Clust_Toronto_01.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO8KCEk4zwxOcM/AszNV/U/",
+      "authorship_tag": "ABX9TyODxHuGbBt7HCDsjWODzmgb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,7 +66,7 @@
         "import pandas as pd\n",
         "#"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -92,7 +92,7 @@
         "url = ' https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M' # web to scrap\n",
         "#"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -141,7 +141,7 @@
         "new_table = new_table.drop([0])\n",
         "#"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -163,7 +163,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 180
         },
-        "outputId": "7d5cc1d9-bee1-4540-b232-a675f262d0b3"
+        "outputId": "bc611504-217b-49aa-c231-b30c33366424"
       },
       "source": [
         "# eliminating the rows with blank items\n",
@@ -196,7 +196,7 @@
         "multiple_code = df_multiple['Neighbourhood'].value_counts(ascending=True)\n",
         "#"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -235,7 +235,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 716
         },
-        "outputId": "18e2e03b-4584-4602-bfc9-5f21ce41b697"
+        "outputId": "3d009f79-ea30-4ea8-8dd7-e12529283287"
       },
       "source": [
         "# output some logs for monitoring\n",
@@ -260,10 +260,11 @@
         "  print('{:.2%} ==> {} Valid Postal Codes Scraped for \"{}\" : {}.'.format((count/total_scraped),count,df_multiple_group['Neighbourhood'][marker],df_multiple_group['Postal Code'][marker]))\n",
         "  marker = marker+1\n",
         "print('\\n==================================================================================================\\n')\n",
+        "#\n",
         "# output the results\n",
         "new_table_in"
       ],
-      "execution_count": 16,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -410,7 +411,48 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1vTU0tbZNZcI",
+        "colab_type": "text"
+      },
+      "source": [
+        "The next code gives me the possibility to save the results like a .csv file in my Google Drive, in order to be used for different Notebooks in the next task."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Bk4D8cMYurD0",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 33
+        },
+        "outputId": "a3d064b0-453a-487e-b973-5eef6c61be9c"
+      },
+      "source": [
+        "# getting access to my drive as local repository\n",
+        "from google.colab import drive\n",
+        "ROOT = \"/content/drive/\"\n",
+        "drive.mount(ROOT)\n",
+        "# convert results to a csv file and save them in the local repository\n",
+        "new_table_in.to_csv('results.csv', index=False)\n",
+        "!cp results.csv \"drive/My Drive/DataScience\""
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Drive already mounted at /content/drive/; to attempt to forcibly remount, call drive.mount(\"/content/drive/\", force_remount=True).\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
