--- a/PGA_Segment&Clust_Toronto_03.ipynb
+++ b/PGA_Segment&Clust_Toronto_03.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "m-L-xk2IV_ZN"
       ],
-      "authorship_tag": "ABX9TyP3kLe5SlVkaymdUAKiQst5",
+      "authorship_tag": "ABX9TyO6COjPq8esNpYRY/DB/uwm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -267,6 +267,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "nU-r68tsqcLK",
+        "colab_type": "text"
+      },
+      "source": [
+        "[If can't see the 'Maps' please follow this link to My GitHub Comment](https://github.com/gvelec/AppliedDataScience/commit/436b6610c677354c38aef81e4b223063f6e1f809#comments)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "JYy3H0MkJAah",
         "colab_type": "text"
       },
@@ -385,6 +395,16 @@
           },
           "execution_count": 9
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sgSTxllwqX6z",
+        "colab_type": "text"
+      },
+      "source": [
+        "[If can't see the 'Maps' please follow this link to My GitHub Comment](https://github.com/gvelec/AppliedDataScience/commit/436b6610c677354c38aef81e4b223063f6e1f809#comments)"
       ]
     },
     {
@@ -9578,6 +9598,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "MtI_ICicqLCe",
+        "colab_type": "text"
+      },
+      "source": [
+        "[If can't see the 'Maps' please follow this link to My GitHub Comment](https://github.com/gvelec/AppliedDataScience/commit/436b6610c677354c38aef81e4b223063f6e1f809#comments)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "KxttXEDHnT8q",
         "colab_type": "text"
       },
@@ -10713,6 +10743,16 @@
           },
           "execution_count": 41
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WO35BR6bpJCG",
+        "colab_type": "text"
+      },
+      "source": [
+        "#[If can't see the 'Maps' please follow this link to My GitHub Comment](https://github.com/gvelec/AppliedDataScience/commit/436b6610c677354c38aef81e4b223063f6e1f809#comments)"
       ]
     }
   ]
