--- a/CapsFinal_.ipynb
+++ b/CapsFinal_.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOhSSTkYvheiLlOvRcCgQMU",
+      "authorship_tag": "ABX9TyPf+NsFanAGgi4U202KtmkP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3715,7 +3715,7 @@
         "outputId": "e38b4881-d2f0-4af1-a83b-5a4ffb4deada"
       },
       "source": [
-        "# Filtering and Counting the Venues by CategoryID (Coleges and Universities)\n",
+        "# Filtering and Counting the Venues by CategoryID (Colleges and Universities)\n",
         "venues_college = venues['College'].loc[venues['College']['Venue Category'].isin(['University','College & University'])].groupby('propertyID').count()\n",
         "venues_university = venues['University'].loc[venues['University']['Venue Category'].isin(['University','College & University'])].groupby('propertyID').count()\n",
         "\n",
@@ -3837,7 +3837,7 @@
         "outputId": "76fdf4d7-5446-4410-de3f-81e163c01a60"
       },
       "source": [
-        "# Getting the Coleges & Universities List Near to the Best Properties\n",
+        "# Getting the Colleges & Universities List Near to the Best Properties\n",
         "venues_final = venues['University'].loc[venues['University']['Venue Category'].isin(['University','College & University'])]\n",
         "venues_final_list = venues_final[venues_final['propertyID']==data_3.index.values[0]]['Venue'].tolist()\n",
         "\n",
@@ -3845,7 +3845,7 @@
         "data_top = data_3.reset_index()\n",
         "data_top.drop(columns=['Cluster Labels','lat','lon','Rank','New Construction','Mean Dist'], inplace=True)\n",
         "\n",
-        "# Getting the Fina Result Properties List\n",
+        "# Getting the Final Result Properties List\n",
         "results_final = pd.DataFrame()\n",
         "results_final[['Address','Beds','Baths','Price']]=data_top[['Address','Beds','Baths','Price']]\n",
         "\n",
@@ -4086,6 +4086,26 @@
       ],
       "execution_count": 38,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MRg3Kjamiuqh",
+        "colab_type": "text"
+      },
+      "source": [
+        "# [If you can't see the MAPS follow this link](https://github.com/gvelec/AppliedDataScience/commit/ae49be79b3bc240be2e5aeecd308f8233f895b14#commitcomment-41538439)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EbW715V-jE0b",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
     }
   ]
 }
