--- a/CapsFinal_.ipynb
+++ b/CapsFinal_.ipynb
@@ -4033,7 +4033,7 @@
       "source": [
         "\n",
         "\n",
-        "##NOT ESCENTIAL: This code give access to Google Drive"
+        "##NOT ESSENTIAL: This code give access to Google Drive"
       ]
     },
     {
