--- a/CapsFinal_.ipynb
+++ b/CapsFinal_.ipynb
@@ -3595,7 +3595,7 @@
         "colab_type": "text"
       },
       "source": [
-        "###Creating our Request Get Venues Funtion"
+        "###Creating our Request Get Venues Function"
       ]
     },
     {
